Revision history for {{$dist->name}}

{{$NEXT}}

0.76      2014-03-18 12:04:18 -0400
  - deprecate stdin attribute for AnyEvent::Open3::Simple
  - optionally pass whole content stdin to run method instead

0.75      2013-09-17 07:54:01 -0400
  - add stdin attribute for AnyEvent::Open3::Simple

0.74      2013-09-12 06:10:50 -0400
  - skip raw support testing on all platforms

0.73      2013-09-10 14:08:24 -0400
  - perl 5.8 support fixes

0.72      2013-09-09 08:20:35 -0400
  - marking raw support as experiementalo
    https://github.com/plicease/AnyEvent-Open3-Simple/issues/6
  - undocumented (and experimental): on_stderr and on_stdout can be list ref

0.71      2013-09-03 15:19:59 -0400
  - fixed raw support

0.70      2013-09-03 12:39:38 -0400
  - promote to production

0.69_02   2013-09-01 14:25:50 -0400
  - add prereq EV on MSWin32

0.69_01   2013-08-31 20:28:03 -0400
  - experimental perl 5.8 support
  - added optional raw attribute to constructor

0.69      2013-08-29 21:58:23 -0400
  - added an alternate idle watcher implementation
  - added MSWin32 support (via idle watcher)
  - change end line processing
    in the past we used chomp() which removed trailing $/
    but this didn't work nicely with MSWin32, instead we
    use a regex that removes \r\n, \n or \r

0.68      2013-08-23 08:38:40 -0400
  - documentation tweaks

0.67      2013-03-21 11:01:47 America/New_York
  - fix META.json,yml

0.66      2013-03-07 08:39:25 America/New_York
  - added on_success callback

0.65      2013-02-09 17:10:56 America/New_York
  - documentation updates

0.64      2013-02-05 08:54:37 America/New_York
  - added timeout to proc.t

0.63      2013-02-04 08:27:08 America/New_York
  - adjust timout detection and failure in test to be more aggressive

0.62      2012-12-29 09:31:07 America/New_York
  - unstuck tests on MSWin32.  Platform is still unsupported as per the docs.

0.61      2012-11-29 12:19:35 America/New_York
  - Documentation clarification