@@ -24,17 +24,17 @@ use File::Temp ();
  
  my $ipc = AnyEvent::Open3::Simple->new(
    on_start => sub {
-     my $proc = shift; # isa AnyEvent::Open3::Simple::Process
+     my $proc = shift;       # isa AnyEvent::Open3::Simple::Process
      say 'child PID: ', $proc->pid;
    },
    on_stdout => sub { 
-     my $proc = shift; # isa AnyEvent::Open3::Simple::Process
-     my $line = shift; # string
+     my $proc = shift;       # isa AnyEvent::Open3::Simple::Process
+     my $line = shift;       # string
      say 'out: ', $string;
    },
    on_stderr => sub {
-     my $proc = shift; # isa AnyEvent::Open3::Simple::Process
-     my $line = shift; # string
+     my $proc = shift;       # isa AnyEvent::Open3::Simple::Process
+     my $line = shift;       # string
      say 'err: ', $line;
    },
    on_exit   => sub {
@@ -47,6 +47,8 @@ use File::Temp ();
    },
    on_error => sub {
      my $error = shift;      # the exception thrown by IPC::Open3::open3
+     my $program = shift;    # string
+     my @args = @_;          # list of arguments
      warn "error: $error";
      $done->send;
    },
@@ -126,7 +128,7 @@ will be called.
 Called after the process is created, but before the run method returns
 (that is, it does not wait to re-enter the event loop first).
 
-=item * C<on_error> ($error)
+=item * C<on_error> ($error, $program, @arguments)
 
 Called when there is an execution error, for example, if you ask
 to run a program that does not exist.  No process is passed in
@@ -143,6 +145,10 @@ you ask to run a program that doesn't exist.  On Linux and Cygwin,
 this will raise an C<on_error> event, on C<MSWin32> it will
 not trigger a C<on_error> and instead cause a normal exit
 with a exit value of 1.
+
+In versions 0.77 and better, this event also gets the program name
+and arguments passed into the L<run|AnyEvent::Open3::Simple#run>
+method.
 
 =item * C<on_stdout> ($proc, $line)
 
@@ -252,7 +258,7 @@ sub run
   
   if(my $error = $@)
   {
-    $self->{on_error}->($error);
+    $self->{on_error}->($error, $program, @arguments);
     return;
   }
   
